# bci-classifier

./: .gitignore  LICENSE  README.md  environment.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package-conda.yml
bciclassifier/: __init__.py  __main__.py  classify.py  constants.py  data_extraction.py  data_manager.py  erpclassifier.py  keras_model.py
tests/: test_data_extraction.py  test_read_mat_file.py
