[metadata]
name = bciclassifier
version = 0.1.0.dev0
author = Roman Kalivoda
author_email = kalivoda@students.zcu.cz
description = A simple classifier for event-related potentials.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RKCZ/bci-classifier
project_urls =
    Bug Tracker = https://github.com/RKCZ/bci-classifier/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7